[package]
name = "wgpu_cyat"
version = "1.1.2"
edition = "2021"
description = "wgpu renderer api for cyat"
license = "BSD-3-Clause"
repository = "https://github.com/CalebCouch/wgpu_cyat.git"

[dependencies]
bytemuck = {version="1.16", features=[ "derive" ]}
cyat = "1.0.2"
ordered-float = "4.6.0"
wgpu = "22.1.0"
wgpu_dyn_buffer = "1.0.0"
