[package]
name = "wgpu_cyat"
version = "1.1.3"
edition = "2021"
description = "wgpu renderer api for cyat"
license = "BSD-3-Clause"
repository = "https://github.com/CalebCouch/wgpu_cyat.git"

[dependencies]
bytemuck = {version="1.16", features=[ "derive" ]}
cyat = "1.0.3"
#cyat = {path="../cyat"}
ordered-float = "4.6.0"
wgpu = "24.0.1"
wgpu_dyn_buffer = "2.0.0"
